fix font! make it more readable

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
+/*
 @import url("https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap");
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=MedievalSharp&family=Roboto+Slab&display=swap");
 
 html,
 body {
@@ -7,9 +11,17 @@ body {
     height: 100%;
 }
 
-body,
-button {
+body {
     font-family: "MedievalSharp", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+p,
+button,
+h2 {
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 }
